<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.solucionestai.basiclocation.MapsActivity">

    <item android:id="@+id/cerrarSesion"
        android:title="@string/StringMenuCerrarSesion"
        android:icon="@drawable/ic_exit_to_app_white_24dp"
        app:showAsAction="ifRoom|withText" />
    <item android:id="@+id/hAlertas"
        android:title="Alertas"
        android:icon="@drawable/ic_history_white_24dp"
        app:showAsAction="ifRoom|withText" />
    <item android:id="@+id/agregarLugar"
        android:title="@string/StringMenuSitios"
        android:icon="@drawable/ic_add_location_white_24dp"
        app:showAsAction="ifRoom|withText" />
    <item android:id="@+id/buscar"
        android:title="@string/StringMenuBuscar"
        android:icon="@drawable/ic_search_white_24dp"
        app:showAsAction="ifRoom|withText" />
    <item android:id="@+id/preferencias"
        android:title="@string/StringMenuPreferencias"
        android:icon="@drawable/ic_settings_white_24dp"
        app:showAsAction="ifRoom|withText" />

</menu>