<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.solucionestai.basiclocation.MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@mipmap/ic_launcher"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textNoSuggestions"
        android:id="@+id/eUser"
        android:layout_centerVertical="true"
        android:hint="@string/StringUsuario"
        android:layout_alignRight="@+id/ePass"
        android:layout_alignEnd="@+id/ePass"
        android:layout_alignLeft="@+id/ePass"
        android:layout_alignStart="@+id/ePass" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="16"
        android:id="@+id/ePass"
        android:layout_below="@+id/eUser"
        android:layout_centerHorizontal="true"
        android:hint="@string/StringPassword" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/StringAceptar"
        android:id="@+id/bLogin"
        android:layout_below="@+id/ePass"
        android:layout_marginTop="26dp"
        android:layout_alignRight="@+id/ePass"
        android:layout_alignEnd="@+id/ePass"
        android:layout_alignLeft="@+id/ePass"
        android:layout_alignStart="@+id/ePass"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored" />
</RelativeLayout>
